[AF] Fixes the scrolling problem with the FormSuggestionView

Bug: 792879
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ic86fa2a72adeab804c22a62efa9b291408e5b482
Reviewed-on: https://chromium-review.googlesource.com/827725
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Moe Ahmadi <mahmadi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524396}
Former-commit-id: fbaaaf60c33945de177d6c649f82c6df0c11c1a0